# kitware

./: .gitignore  CMakeLists.txt  package.xml  pid.perspective  readme.md  setup.cfg  setup.py
kitware/: drive_motor.py  encoder.py  field_display.py  kbd_driver.py  kitbot.py  pid.py  sim.py  vision.py  visionbot.py
kitware/install/: local_setup.sh  setup.sh
kitware/log/: latest_build
launch/: kitsoft.launch  kitware.launch  kitware_launch.py  manual_visionware_launch.py  pid_demo_launch.py  visionware_launch.py
msg/: DriveCmd.msg  DrivePIDCmd.msg  EncoderRead.msg  PIDCmd.msg  PIDOutput.msg
scripts/: kbd_driver.py  kitbot.py
